--- a/fdphd.bib
+++ b/fdphd.bib
@@ -787,7 +787,7 @@ lts.fzu.cz/pdf/d-js.pdf
 
 % % == Theory - printed in Autumn 2014 ==
 % -- EBD theory and nonlocal electrodynamics --/*{{{*/
-@inbook{krowne2007book,
+@inbook{krowne2007book_agran,
   author={V. M. Agranovich and Yu. N. Gartstein},
   title={Physics of negative refraction and negative index materials: optical and electronic aspects and diversified approaches},
   chapter={Spatial Dispersion, Polaritons, and Negative Refraction}, 
