--- a/theory.tex
+++ b/theory.tex
@@ -328,7 +328,7 @@ By means of the other Maxwell equation (\ref{eq_me3}), the magnetic induction $\
 \begin{equation} \Dsd = \D - \frac{1}{\omega^2 \mu_0}\left(1 - \frac{1}{\murl}\right) \kk\times(\kk\times \E)  \label{eq_Dsd3}\end{equation}
 %}}}
 \paragraph{Tensor form of the spatial-dispersive permittivity}%{{{
-Continuing in the derivation outlined in \cite{landau1984electrodynamics, krowne2007book, agranovich2006spatial}, we can derive the tensor form of spatial-dispersive permittivity $\varepsilon_{ij}(\omega,\kk)$.
+Continuing in the derivation outlined in \cite{landau1984electrodynamics, krowne2007book_agran, agranovich2006spatial}, we can derive the tensor form of spatial-dispersive permittivity $\varepsilon_{ij}(\omega,\kk)$.
 
 The downsides of the spatial-dispersive model of media is that it is more complicated, leading e.g. to implicit dispersion equation. Its great advantage is however that it provides a correct description of periodic structures discussed below. 
 %}}}
@@ -476,7 +476,7 @@ More detailed investigation shows that the effective-medium approach does not gi
 \section{TODO}
 
 EBD theory and nonlocal electrodynamics 
-\cite{krowne2007book}
+\cite{krowne2007book_agran}
 \cite{landau1984electrodynamics}
 \cite{agranovich2006spatial}
 \cite{mikki2009electromagnetic}
