--- a/appendices.tex
+++ b/appendices.tex
@@ -21,7 +21,9 @@ $x', x''$ are the	real and imaginary part of $x$\\
 $k$ 		is the magnitude of the vector $\kk$\\
 
 Except for where it is important, the explicit time, space or frequency dependence is omitted. So for electric field we write $\E$ instead of $\E(\rr,t)$.
+%}}}
 
+\paragraph{Abbreviations used} %{{{
 \begin{table}[ht]   \caption{Table of abbreviations}  \label{tb_shortcuts} \centering 
 \begin{tabular}{ll}
  \toprule
@@ -31,6 +33,7 @@ FDTD 		& Finite-difference time-domain (numerical simulation)\\
 FDFD 		& Finite-difference frequency-domain (numerical simulation)\\
 FEM 		& Finite-element method (numerical simulation)\\
 FFT 		& Fast Fourier transform (algorithm)\\
+FRoI 		& Frequency range of interest\\
 FDM 		& Filter diagonalisation method (algorithm)\\
 MM			& Metamaterial\\
 NRW 		& Nicolson-Ross-Weir (method for effective parameter retrieval)\\
@@ -44,7 +47,7 @@ TDTS 		& Time-domain terahertz spectroscopy\\
  \end{tabular} \end{table}
 %}}}
 
-\begin{table}[ht]   \caption{Symbols used}  \label{tb_symbols} \centering 
+\begin{table}[ht]   \caption{Symbols used}  \label{tb_symbols} \centering %{{{
 \begin{tabular}{ll}
  \toprule
 Symbol & Meaning	\\
@@ -78,3 +81,4 @@ $\mathcal F$ 		& Fourier transform\\
  \bottomrule
  \end{tabular} \end{table}
 %}}}
+
