--- a/fdphd.bib
+++ b/fdphd.bib
@@ -862,7 +862,7 @@ lts.fzu.cz/pdf/d-js.pdf
 }
 
 @article{agranovich1962crystal,
-  title={Crystal optics with allowance for spatial DISPERSION; exciton THEORY. I},
+  title={Crystal optics with allowance for spatial dispersion; exciton theory},
   author={Agranovich, Vladimir M and Ginzburg, Vitalii L},
   journal={Soviet Physics Uspekhi},
   volume={5},
