--- a/theory.tex
+++ b/theory.tex
@@ -23,6 +23,41 @@
 %%     it can often do so, but without giving any physical insight. Such a result is not a proof of the theory to be
 %%     applicable to the problem, and in some cases not even of the theory to make any sense whatsoever."""
 
+% TODO we refer to tunability - complete it in the rest of the document!!
+%% TODO unify impedance as `Z', not `z'
+
+% TODO check if the wavenumber K~/ (2pi/a) is correct
+% unify the terminology "band diagram" - "dispersion curves"
+
+
+
+
+% TODO: 
+% Electrodynamics of continuous media
+% -> Electromagnetic wave in vacuum
+% -> Lorentz-Drude model
+% -> Dispersion relation in Lorentz-Drude media
+% -> Drude model, conductivity and superconductivity
+% Spatial-dispersive model for continuous media
+% -> General formulation of spatial dispersion
+% -> Magnetic effects included in spatial-dispersive permittivity
+% -> Comparison of eps-mu and spatial-dispersive models (electric quadrupoles..., [Merlin])
+% -> Why magnetic resonances do not contribute to static permeability?
+% Electrodynamics of periodic structures
+% -> Bloch theorem (and its proof)
+% -> K-space and isofrequency contours
+% -> Group velocity, phase velocity and their signs [Mikki]
+% -> Homogenisation by NRW algorithm, automatic branch selection
+% -> Antiresonances -- problems with epsilon-mu approach
+% -> EDB model for periodic structures
+% Homogenisation algorithms 
+% -> PWEM
+% -> Reflection-transmission, or NRW, method
+% -> Current-driven homogenisation
+
+% Numerical methods used
+% -> 
+
 
 \add{The theoretical chapter starts with a brief review of \textit{electrodynamics of continuous media}. In its customary form without account for spatial dispersion, this topic is treated in every related textbook, so classical linear electrodynamics is introduced in a minimalistic manner, avoiding many relevant topics such as TODO, which are not essential for the description of metamaterials.  This serves as a basis for transforming into the so-called Landau-Lifshitz formulation of electrodynamis for spatially-dispersive media, which is elaborated more in detail.}
 \section{Electrodynamics of continuous media} 
