--- a/fdphd.bib
+++ b/fdphd.bib
@@ -753,8 +753,10 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2013},
   publisher={APS}
 } 
+ % title={Plasmon and polar optical phonons in reduced rutile {TiO}$_{2-x}$},
+ % author={Baumard, Jean-Fran{\c{c}}ois and Gervais, Fran{\c{c}}ois},
 @article{baumard1977_epsilon_TiO2, 
-  title={Plasmon and polar optical phonons in reduced rutile {TiO}$_{2-x}$},
+  title={Plasmon and polar optical phonons in reduced rutile {TiO(2-x)}},
   author={Baumard, Jean-Fran{\c{c}}ois and Gervais, Fran{\c{c}}ois},
   journal={Phys. Review B},
   volume={15},
@@ -782,7 +784,7 @@ lts.fzu.cz/pdf/d-js.pdf
 
 %    STO   
 % Neville 1972 Permittivity of STO
-/*}}}*/
+%/*}}}*/
 
 
 % % == Theory - printed in Autumn 2014 ==
