--- a/temp.tex
+++ b/temp.tex
@@ -15,14 +15,14 @@
 
 \begin{document}
 \input{title.tex}
-%\tableofcontents
+\tableofcontents
 \chapter{Theory}
-%\input{theory.tex}
+\input{theory.tex}
 \chapter{Experimental and numerical methods}
 \input{expe.tex}
 \chapter{Results}
 \input{result.tex}
-%\label{endtext} 
+\label{endtext} 
 
 \chapter{Appendices}
 
