--- a/expe.tex
+++ b/expe.tex
@@ -475,27 +475,27 @@ s_{12}(f) \equiv t(f) := \frac{A^{(out 2)}(f)}{A^{(in 1)}(f)}.
 
 \paragraph{Experimental verification of reflection and transmission} 
 \begin{figure} 
-\caption{\textbf{a)} Electron microphotograph of the STO array, % TODO from		H. Nˇmec, P. Kuˇel, F. Kadlec, C. Kadlec, R. Yahiaoui, and P. Mounaix, Tunable terahertz metamaterials with e z~negative permeability, Phys. Rev. B 79, 241108(R) (2009) 
+\caption{\textbf{a)} Electron microphotograph of the STO array (from \cite{nemec2009tunable}), % TODO from HNemec, et al. Tunable terahertz metamaterials with e z~negative permeability, Phys. Rev. B 79, 241108(R) (2009) 
+%\begin{figure} \caption{img/STOBar\_photo.pdf}  \centering  \end{figure} \clearpage
 \textbf{b)} dimensions of one unit cell thereof, with the orientation of the $\E$, $\HH$ and $\kk$ vectors}  \centering 
-\textbf{a)} \mbox{\vspace{3cm}\includegraphics[width=5cm]{img/STOBar_photo_narrow.pdf}} 
+\textbf{a)} \mbox{\vspace{3cm} \includegraphics[width=9cm]{img/STOBar_photo.pdf}}  % \includegraphics[width=5cm]{img/STOBar_photo_narrow.pdf}
 \mbox{\textbf{b)} \mbox{\vspace{3cm}\includegraphics[width=5cm]{img/EBars_STO_sketch.pdf}} }
 \label{fg_STO_bar_geom} \end{figure} 
-To verify the simulation results against experimental data, we computed $r(f)$ and $t(f)$ for a structure that was measured previously. % TODO when, add cite
+To verify the simulation results against experimental data, we computed $r(f)$ and $t(f)$ for a structure that was measured previously in our terahertz laboratory. % TODO when, add cite
 It consisted of an array of high-permittivity dielectric bars, cut using a femtosecond laser into a 26 $\upmu$m thick strontium titanate (STO) slab. The periodicity was 96 $\upmu$m and the laser cut width was 30 $\upmu$m, resulting in 66 $\upmu$m width of each rectangular bar as shown in Fig. \ref{fg_STO_bar_geom}a,b. The permittivity of STO strongly depends on the temperature, and was not known a priori, so it was chosen as $\varepsilon_r(1\text{ THz}) = 365 + 62\ii$ for the simulation to match experimental data on the frequency axis.
-%\begin{figure} \caption{img/STOBar\_photo.pdf}  \centering \includegraphics[width=10cm]{img/STOBar_photo.pdf} \end{figure} \clearpage
 \begin{figure} \caption{Experimental transmission $t_{exp}(f)$, compared to numerical reflection $r(f)$ and transmission $t(f)$ for strontium titanate bars $||\mathbf E$ of rectangular cross-section $26 \times 66\;\upmu$m. }  \centering \includegraphics[width=12cm]{img/STObar_rt.pdf} \label{fg_STO_bar_rt} \end{figure} 
-The curves computed from the FDTD simulation are compared to the data obtained from the terahertz laboratory in Fig. \ref{fg_STO_bar_rt}, with a very good match in three well-resolved resonance peaks, and also in high reflectivity ($|r| > 0.9$) in most of the spectrum which is caused by great impedance mismatch of the dielectric with regards to the surrounding air.
+The curves computed using the FDTD simulation are compared to the experimental one in Fig. \ref{fg_STO_bar_rt}, with a very good match in three well-resolved resonance peaks, and also in the high reflectivity ($|r| > 0.9$) in most of the spectrum which is caused by great impedance mismatch of the dielectric with regards to the surrounding air.
 
-\begin{figure}[h] \centering \includegraphics[width=\textwidth]{img/STOBarC_modes2.pdf} \label{fg_STO_bar_modes} \end{figure}
-To briefly illustrate further possibilities of the numerical simulation, we scanned the relative width of the STO bar, and computed the relative energetic loss in the structure as $1-|r^2|-|t^2|$. Each loss peak can be clearly associated with one resonant mode in the dielectric, as is shown in Fig. \ref{fg_STO_bar_modes}. The figure can reveal rich information about the underlying physics, most notably that the frequency at which different modes resonate has a different power dependence on the bar width. Note that both vertical and horizontal axes are logarithmic, so this exponent can be directly estimated from the sloped line the resonance peaks were fitted with. 
+\begin{figure}[h] \centering \caption{Parametric scan through the strontium titanate bar width, loss spectra computed as $1-|r^2|-|t^2|$. The bar width of 66 $\upmu$m is denoted by thin white line. Different modes are joined by black curves and their electric field shapes are drawn above the plot.} \includegraphics[width=\textwidth]{img/STOBarC_modes2.pdf} \label{fg_STO_bar_modes} \end{figure}
+To briefly illustrate further possibilities of the numerical simulation, we scanned the relative width of the STO bar, and computed the relative energetic loss in the structure as $1-|r^2|-|t^2|$. Each loss peak can be clearly associated with one resonant mode in the dielectric, as is shown in Fig. \ref{fg_STO_bar_modes}. The two-dimensional scan can reveal rich information about the underlying physics, most importantly that the frequency at which different modes resonate has a different power dependence on the bar width. Note that both vertical and horizontal axes are logarithmic, so this exponent can be directly estimated from the sloped line the resonance peaks were fitted with. Only modes with mirror symmetry in the transverse direction ($y$-axis) couple to the wave.
 
 It can also be read from Fig. \ref{fg_STO_bar_modes} that around the bar width of 66 $\upmu$m, as denoted by a horizontal white line, there is actually a frequency cross-over of two modes, a narrow transverse one and a more broader longitudinal one. This explains why in Fig. \ref{fg_STO_bar_rt} the first resonance has an obviously asymmetric shape in the simulated and experimental spectra.  %% This would form a typical Fano resonance if the losses were lower.
-More elaborate discussion of rod-like structures oriented either along the electric or thee magnetic field will follow in the Sections \ref{sect_diel_rods_mag} and \ref{sect_diel_rods_el}.
+More elaborate discussion of periodic structures composed of dielectric bars/rods oriented either along the electric or thee magnetic field will follow in the Sections \ref{sect_diel_rods_mag} and \ref{sect_diel_rods_el}.
 
 \paragraph{Retrieval of effective parameters} 
 So far, we computed the amplitude and phase of frequency-dependent complex reflection $r(f)$ and transmission $t(f)$ for one (or eventually more) layers of a given structure. 
 These data, if supplied with the expected cell thickness, are also sufficient to deduce the behaviour of a periodic structure composed of infinity of such unit cells, i.e., to retrieve the effective parameters of the structure. % TODO this needs some discussion, if it is possible etc. ... or at least to get isofrequency contours if effparam do not exist, or if the method is too approximate
-To this end, now employ the Fresnel inversion and show a custom approach how to obtain physically sound selection of the correct branch of solution.
+To this end, we employ the Fresnel inversion and show a custom approach how to obtain physically sound selection of the correct branch of solution.
 % TODO develop this somehow, cite Rockstuhs2004, relate to spatial dispersion and nonlocality - the evanescent field can be decomposed into dipoles, quadrupoles etc}
 %It shall be noted that although the structure consists of a single layer, transmission and reflection is measured in the form of radiated waves to compute effective parameters for an infinite structure. The energy transferred by near field (evanescent wave) is neglected here. 
 %The field components at the first monitor plane ($E_x^{(1)}, H_y^{(1)}$) and at the second one ($H_y^{(2)}, E_x^{(2)}$) give sufficient information for this, for instance at which frequencies are the photonic bands and which $K$-vector the wave will have. 
@@ -514,15 +514,7 @@ and also its wave impedance:
 \begin{equation} z= \pm \sqrt{\frac{\left[(1+r)^2 - t^2\right]}{(1-r)^2 - t^2}}. \label{eq_fresinvz}\end{equation}
 The sign and branch of the refraction index, and the sign of wave impedance are not known a priori.  These three discrete-valued functions have to be selected during computation. The absence of abrupt skips in the spectra, passivity requirements (Im$(N) \geq 0$, Re$(Z) \geq 0$) and the Kramers-Kronig relations are a good verification of a correct solution. We have written routines that perform this task automatically after each FDTD simulation is run. Not knowing the index of refraction is equivalent to expressing the folded dispersion curves, so the postprocesing of FDTD data corresponds to unambiguous \textit{unfolding} of the dispersion curves.
 }
-
-% TODO cite smith2002 and nrw sources
-
-%}}}
-\paragraph{Unambiguous arccosine} %{{{
-
-We performed finite-difference time-domain simulations \cite{oskooi2010meep} to obtain
-the frequency ($f$)-dependent complex reflection $r(f)$ and transmission coefficients
-$t(f)$ of a sample composed of periodically distributed dielectric rods.
+% TODO cite nrw sources smith2002 and 
 
 Knowing the complex $r(f)$ and $t(f)$ along with the sample thickness $d$, we may use the
 classical algorithm to retrieve the effective parameters \cite{smith2002determination}:
@@ -535,12 +527,15 @@ classical algorithm to retrieve the effective parameters \cite{smith2002determin
 \end{equation}
 where $k = 2\pi f/c$ is the wave vector in vacuum and $c$ is the speed of light.
 
+
+%}}}
+\paragraph{Unambiguous arccosine} %{{{
 The well-known complication of this approach is that the arccosine and square root are
-ambiguous functions \cite{Simovski09}, yielding multiple solutions with different branches (indexed by an
+ambiguous functions \cite{simovski09}, yielding multiple solutions with different branches (indexed by an
 integer $m$) and signs. 
 We deal with a passive medium, consequently we impose
 Im$(\Neff)>0$ and Re$(\Zeff)>0$. To facilitate processing of the results, we 
-adopted an approach different from earlier published works \cite{Smith02,Chen04} %% Chen04 = http://journals.aps.org/pre/abstract/10.1103/PhysRevE.70.016608
+adopted an approach different from earlier published works \cite{smith02,chen04} %% Chen04 = http://journals.aps.org/pre/abstract/10.1103/PhysRevE.70.016608
 that ensures the continuity of effective parameters as a function of frequency \add{on pure mathematical basis}. This
 continuity is required by Kramers-Kronig relations for arbitrarily small losses
 introduced in the system. The important point consists in identifying the branch cuts of
